--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
 PORT=3000
 NODE_ENV=development
-CLIENT_URL=""
-CLIENT_URL_DEV=http://localhost:3000
-DATABASE_URL=""
-DATABASE_URL_DEV="postgresql://postgres:postgres@localhost:5432/shopping?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/shopping?schema=public"
